test/files/pos/t4188.scala
class A {
  object Ding
  class B {
    (null: Any) match { case _: Ding.type => () }
  }
}
